--- a/grandfilms/src/components/routes/Home/home.scss
+++ b/grandfilms/src/components/routes/Home/home.scss
@@ -5,7 +5,8 @@
 
 html{
     // background-color: rgb(184, 237, 250)
-    background-color: rgb(0, 0, 0)
+    background-color: rgb(0, 0, 0),
+    
 }
 
 h3{
@@ -82,7 +83,7 @@ p {
 
 .wrapper {
     font-family: " Montserrat ";
-    
+    z-index: 1;
     margin: 0;
     
    
@@ -102,7 +103,7 @@ p {
     width: 80%;
     transition: all 2s ease-in 1s;
     animation: linear;
-
+    z-index: 1;
    
 }
 
@@ -124,6 +125,7 @@ p {
     width: 50%;
     transition: all 2s ease-in 1s;
     animation: linear;
+    z-index: 1;
 
    
 }
